# mini-openclaw

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
plugins/example_plugin/: tools.py
src/mini_openclaw/: __init__.py  __main__.py  config.py
src/mini_openclaw/core/: agent.py  agent_comm.py  agent_roles.py  errors.py  events.py  gateway.py  health_monitor.py  hitl.py  result_aggregator.py  scheduler.py  session.py  shared_memory.py  tool_discovery.py
src/mini_openclaw/interfaces/cli/: app.py
src/mini_openclaw/interfaces/web/: app.py  routes.py  websocket.py
src/mini_openclaw/interfaces/web/static/: app.js  index.html  style.css
src/mini_openclaw/llm/: base.py  context_manager.py  lmstudio_client.py  ollama_client.py  react_fallback.py  tool_calling.py
src/mini_openclaw/tools/: base.py  mcp_client.py  permissions.py  plugin_loader.py  registry.py
src/mini_openclaw/tools/builtin/: agent_comm_tool.py  browser_control.py  cron_job.py  file_read.py  file_write.py  http_request.py  pip_install.py  python_exec.py  shared_memory_tool.py  shell_exec.py  spawn_agent.py  spawn_parallel_tool.py  web_search.py
tests/: conftest.py  test_browser_control.py  test_builtin_tools.py  test_dynamic_agent_features.py  test_hitl.py  test_integration.py  test_lmstudio_client.py  test_new_tools.py  test_react_fallback.py  test_scheduler.py  test_tool_registry.py
