[project]
name = "mini-openclaw"
version = "0.1.0"
description = "Dynamic Agent Spawning system inspired by OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.80",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "websockets>=12.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[project.scripts]
mini-openclaw = "mini_openclaw.__main__:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
